--- a/projects/mapf_page/files/info_test_comparative_report.html
+++ b/projects/mapf_page/files/info_test_comparative_report.html
@@ -28,7 +28,7 @@
         <thead>
             <tr>
                 <th rowspan="2">Num Agents</th>
-                <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                 <th colspan="3" class="main-header-astar">Alert-A*</th>
                 <th colspan="3" class="main-header-primal">PRIMAL</th>
                 <th rowspan="2" class="main-header">IU Reduction (vs PRIMAL)</th>
@@ -317,7 +317,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -333,7 +333,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -349,7 +349,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -365,7 +365,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -381,7 +381,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -397,7 +397,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -413,7 +413,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -429,7 +429,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -445,7 +445,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -461,7 +461,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -477,7 +477,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -493,7 +493,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -509,7 +509,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -525,7 +525,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -541,7 +541,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
@@ -557,7 +557,7 @@
             <thead>
                 <tr>
                     <th rowspan="2">Problem ID</th>
-                    <th colspan="3" class="main-header-bfs">Alert-BFS (My Algo)</th>
+                    <th colspan="3" class="main-header-bfs">Alert-BFS </th>
                     <th colspan="3" class="main-header-astar">Alert-A*</th>
                     <th colspan="3" class="main-header-primal">PRIMAL</th>
                 </tr>
