added aaai symposium paper deets

--- a/projects/rating_page/index.html
+++ b/projects/rating_page/index.html
@@ -192,6 +192,45 @@
         </div>
 
         <h1>Research Publications</h1>
+
+        <div class="paper">
+            <p style="text-align: justify;"><span style="background-color: hsla(95, 99%, 35%, 0.302);"><b>On Identifying Why and When Foundation Models Perform Well on Time-Series Forecasting Using Automated Explanations and Rating
+            </b></span></p>
+                <i><b style="color: blue">Symposium:</b> AAAI2025 Fall Symposium on  AI Trustworthiness and Risk Assessment for Challenged Contexts (ATRACC), Arlington, VA, USA, Nov 2025</i>
+                <br>
+                <i><b>Collaborators: </b>AIISC - University of South Carolina</i>
+                <br>
+                <i><b>Contributors: </b>Michael Widener, Kausik Lakkaraju, John Aydin, Biplav Srivastava</i>
+                <br>
+            </p>
+            <p style="text-align: justify;">
+                Time-series forecasting models (TSFM) have evolved from classical statistical methods to sophisticated foundation models, 
+                yet understanding why and when these models succeed or fail remains challenging. Despite this known limitation, time series 
+                forecasting models are increasingly used to generate information that informs real-world actions with equally real consequences. 
+                Understanding the complexity, performance variability, and opaque nature of these models then becomes a valuable endeavor to combat 
+                serious concerns about how users should interact with and rely on these models' outputs. This work addresses these concerns by 
+                combining traditional explainable AI (XAI) methods with Rating Driven Explanations (RDE) to assess TSFM performance and 
+                interpretability across diverse domains and use cases. We evaluate four distinct model architectures: ARIMA, Gradient Boosting, 
+                Chronos (time-series specific foundation model), Llama (general-purpose; both fine-tuned and base models) on four heterogeneous 
+                datasets spanning finance, energy, transportation, and automotive sales domains. In doing so, we demonstrate that feature-engineered 
+                models (e.g., Gradient Boosting) consistently outperform foundation models (e.g., Chronos) in volatile or sparse domains (e.g., 
+                power, car parts) while providing more interpretable explanations, whereas foundation models excel only in stable or trend-driven 
+                contexts (e.g., finance).
+            </p>
+            <!-- <img src="../rating_page/images/xai_rating.png" alt="TSFM" 
+            style="width: 20%; 
+                   height: auto;
+                   border-radius: 5px;
+                   margin: 10px auto; 
+                   display: block;"> -->
+            <div class="links">
+                <a href="https://arxiv.org/abs/2508.20437" target="_blank"><b>[Paper]</b></a>
+                <a href="../rating_page/bib/xai_ts_2025.txt" target="_blank" type="text/plain"><b>[Bibtex]</b></a>
+            </div>
+        </div>
+            
+
+
         <div class="paper">
             <p style="text-align: justify;"><span style="background-color: hsla(95, 99%, 35%, 0.302);"><b>On Creating a Causally Grounded Usable Rating Method for Assessing the Robustness of Foundation Models Supporting Time Series
             </b></span></p>
