--- a/publications/index.html
+++ b/publications/index.html
@@ -43,6 +43,7 @@
                             <div class="sub-topics">
                                 <p>Conference</p>
                                 <p>Journal</p>
+                                <p>Symposium</p>
                                 <p>Workshop</p>
                                 <p>Demo</p>
                                 <p>Tutorial</p>
@@ -90,7 +91,16 @@
 
                         <ul class="papers-list">
 
-                            
+                            <li><b>On Identifying Why and When Foundation Models Perform Well on Time-Series Forecasting Using Automated Explanations and Rating</b><br>
+                                <i>AAAI2025 Fall Symposium on  AI Trustworthiness and Risk Assessment for Challenged Contexts (ATRACC), Arlington, VA, USA, Nov 2025 (Time-Series, XAI)</i><br>
+                                Michael Widener, Kausik Lakkaraju, John Aydin, Biplav Srivastava
+                                <br>
+                                <a href='https://arxiv.org/abs/2508.20437' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Symposium</span>
+                                <span class="tag tag-method">Trust Rating</span>
+                                <br>
+                            </li>
+
                             <li><b>Revisiting LLMs in Planning from Literature Review: a Semi-Automated Analysis 
                                 Approach and Evolving Categories Representing Shifting Perspectives, 
                                 </b><br>
