gaico youtube link update

--- a/demos/index.html
+++ b/demos/index.html
@@ -83,7 +83,7 @@
                 and visualization.
               </p>
               <a
-                href="https://www.youtube.com/watch?v=QYosqxAF5uo"
+                href="https://youtu.be/ixxqTT-eV48"
                 target="_blank"
                 rel="noopener noreferrer"
                 >[Demo Video]</a
