gaico and arc demo description update

--- a/demos/index.html
+++ b/demos/index.html
@@ -78,12 +78,11 @@
                 <span class="tag tag-method">Trust Rating</span>
               </h3>
               <p>
-                A Python library providing evaluation metrics to compare generated texts from LLMs,
-                often against reference texts. Features streamlined workflows for model comparison
-                and visualization.
+                A Python library providing multi-modal evaluation metrics to compare generative AI outputs, 
+                often against references. Features streamlined workflows for model comparison and visualization. 
               </p>
               <a
-                href="https://youtu.be/ixxqTT-eV48"
+                href="https://tinyurl.com/yvu78n9k"
                 target="_blank"
                 rel="noopener noreferrer"
                 >[Demo Video]</a
@@ -334,20 +333,17 @@
                 <span class="tag tag-method">Trusted AI</span>
               </h3>
               <p>
-                We introduce ARC, a tool to rate AI systems for bias through a causal lens. The main
-                objective of the tool is to assist developers in building better models and aid
-                end-users in making informed decisions based on the available data. The tool is
-                extensible and currently supports three different AI tasks: binary classification
-                ,sentiment analysis, and group recommendation. It gives users the option of choosing
-                data for a task and rating AI systems for bias with respect to different protected
-                attributes present in the data. The rating method is system-independent and the
-                ratings given by the algorithm are causally interpretable .These ratings help the
-                user make an informed decision based on the data in hand.
+                As Artificial Intelligence (AI) systems become more powerful, concerns about trust issues like bias limit their adoption. 
+                Bias often arises with respect to protected attributes such as gender, race, and age. We present ARC, an extensible tool 
+                that rates AI models through a causal lens, covering bias, robustness to perturbations, and accuracy. ARC assists developers 
+                in improving models and helps end-users make informed choices. It currently supports four tasks: binary classification, 
+                sentiment analysis, group recommendation, and time-series forecasting, and allows users to evaluate models on custom datasets. 
+                The rating method is model-independent and causally interpretable.
               </p>
               <!-- <a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/358475224_ROSE_Tool_and_Data_ResOurces_to_Explore_the_Instability_of_SEntiment_Analysis_Systems/links/6203f8d0c83d2b75dffd6ecc/ROSE-Tool-and-Data-ResOurces-to-Explore-the-Instability-of-SEntiment-Analysis-Systems.pdf"
             target="_blank" rel="noopener noreferrer">[Paper]</a> -->
               <a
-                href="https://drive.google.com/file/d/1SN0-gelnUFwMfAdZr0tTV6rtbBkCQH9q/view?usp=drive_link"
+                href="https://tinyurl.com/bd3cxhrb"
                 target="_blank"
                 >[Demo Video]</a
               >
