--- a/planfm/index.html
+++ b/planfm/index.html
@@ -22,7 +22,7 @@
             <a href="index.html" class="home-link">Home</a>
             <nav class="nav">
               <ul class="nav-list">
-                <li><a href="" class="nav-link">Project</a></li>
+                <li><a href="project.html" class="nav-link">Project</a></li>
                 <li><a href="publications.html" class="nav-link">Publications</a></li>
                 <li><a href="team.html" class="nav-link">Team</a></li>
               </ul>
