--- a/planfm/team.html
+++ b/planfm/team.html
@@ -19,7 +19,7 @@
         <a href="index.html" class="home-link">Home</a>
         <nav class="nav">
           <ul class="nav-list">
-            <li><a href="index.html#project" class="nav-link">Project</a></li>
+            <li><a href="project.html" class="nav-link">Project</a></li>
             <li><a href="publications.html" class="nav-link">Publications</a></li>
             <li><a href="team.html" class="nav-link">Team</a></li>
           </ul>
