--- a/index.html
+++ b/index.html
@@ -53,8 +53,24 @@
                     complexities of poor data, changing goals, and limited resources by augmenting their cognitive
                     limitations with technology. Lead by <a href="https://sites.google.com/site/biplavsrivastava"
                       target="_blank"> Prof. Biplav Srivastava</a>, the group works in neuro-symbolic methods, trusted
-                    AI, and applications of data-driven methods to society.
+                    AI, and applications of data-driven methods to society. Our differentiating initiatives are in 
+                    language models and ontology for planning 
+                      (<a href="https://ai4society.github.io/projects/generalized_planning/index.html"
+                      target="_blank">generalized planning</a>), 
+                      (<a href="https://ai4society.github.io/projects/rating_page/index.html"
+                      target="_blank">black-box rating for AI </a>), 
+                    metaconition-based systems combining fast (e.g., LLMs) and slow thinking (e.g., reasoners), and 
+                    exploring AI like
+                    <a href="https://ai4society.github.io/projects/chatbots_page/index.html"
+                      target="_blank">chatbots</a>)
+                     in <a href="https://sites.google.com/site/biplavsrivastava/research-1/ai-and-elections" 
+                               target="_blank">elections</a>,  
+                     <a href="https://ai4society.github.io/projects/InfoSpread/index.html" 
+                               target="_blank">opinion networks</a>, and
+                    <a href="https://sites.google.com/site/biplavsrivastava/research-1/ai-and-healthcovid19" 
+                               target="_blank">health</a>.
                   </p>
+                  
                   <div style="background-color: #cef1c7; padding: 6px 10px; border-radius: 5px; margin: 10px 0;">
                     <p align="justify" style="font-weight: bold; margin: 0;">
                       We focus on innovating and applying AI techniques for hard problems facing the society with an
@@ -133,6 +149,16 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-date month">September</div>
 
+                        <div class="timeline-content">
+                        <p>
+                          A book edited and contributed by AI4S titled <i>PROMISE</i> - 
+                          <a href="https://link.springer.com/book/10.1007/978-3-031-89853-2" target="_blank">PROMoting AI’s Safe usage 
+                            for Elections</a>, is released by Springer Nature 
+                            (<a href="https://sites.google.com/site/biplavsrivastava/research-1/ai-and-elections" 
+                               target="_blank">more</a>).
+                        </p>
+                      </div>
+                    
                       <div class="timeline-content">
                         <p>
                           A paper on <i>A Neurosymbolic Fast and Slow Architecture for Graph Coloring</i> is accepted at 
