--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     language models and ontology for planning 
                       (<a href="https://ai4society.github.io/projects/generalized_planning/index.html"
                       target="_blank">generalized planning</a>), 
-                      (<a href="https://ai4society.github.io/projects/rating_page/index.html"
-                      target="_blank">black-box rating for AI </a>), 
+                      <a href="https://ai4society.github.io/projects/rating_page/index.html"
+                      target="_blank">black-box rating for AI </a>, 
                     metaconition-based systems combining fast (e.g., LLMs) and slow thinking (e.g., reasoners), and 
                     exploring AI like
                     <a href="https://ai4society.github.io/projects/chatbots_page/index.html"
