--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     metaconition-based systems combining fast (e.g., LLMs) and slow thinking (e.g., reasoners), and 
                     exploring AI like
                     <a href="https://ai4society.github.io/projects/chatbots_page/index.html"
-                      target="_blank">chatbots</a>
+                      target="_blank">chatbots</a> in trust-sensitive domains like 
                      in <a href="https://sites.google.com/site/biplavsrivastava/research-1/ai-and-elections" 
                                target="_blank">elections</a>,  
                      <a href="https://ai4society.github.io/projects/InfoSpread/index.html" 
