--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
                       (<a href="https://ai4society.github.io/projects/generalized_planning/index.html"
                       target="_blank">generalized planning</a>), 
                       <a href="https://ai4society.github.io/projects/rating_page/index.html"
-                      target="_blank">black-box rating for AI</a>,  metaconition-based                 
+                      target="_blank">black-box rating for AI</a>,  
+                      <a href="https://ai4society.github.io/projects/group_rec/index.html"
+                      target="_blank">group recommendation</a>,  
+                    metaconition-based                 
                     <a href="https://github.com/ai4society/sofai_tool/"
-                      target="_blank">SOFAI tool</a> that 
-                    combines fast (e.g., LLMs) and slow thinking (e.g., reasoners), and 
+                      target="_blank">SOFAI tool</a> to combine fast (e.g., LLMs) and slow thinking 
+                      (e.g., reasoners), and 
                     exploring AI like
                     <a href="https://ai4society.github.io/projects/chatbots_page/index.html"
                       target="_blank">chatbots</a> in trust-sensitive domains like 
