--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                       (e.g., reasoners), and 
                     exploring AI like
                     <a href="https://ai4society.github.io/projects/chatbots_page/index.html"
-                      target="_blank">chatbots</a> in trust-sensitive domains like 
-                     in <a href="https://sites.google.com/site/biplavsrivastava/research-1/ai-and-elections" 
+                      target="_blank">chatbots</a> in trust-sensitive domains, viz. 
+                      <a href="https://sites.google.com/site/biplavsrivastava/research-1/ai-and-elections" 
                                target="_blank">elections</a>,  
                      <a href="https://ai4society.github.io/projects/InfoSpread/index.html" 
                                target="_blank">opinion networks</a>, and
