--- a/index.html
+++ b/index.html
@@ -57,14 +57,20 @@
                     language models and ontology for planning 
                       (<a href="https://ai4society.github.io/projects/generalized_planning/index.html"
                       target="_blank">generalized planning</a>), 
+                      black-box 
                       <a href="https://ai4society.github.io/projects/rating_page/index.html"
-                      target="_blank">black-box rating for AI</a>,  
+                      target="_blank">assessment and rating for AI</a>
+                       (<a href="https://pypi.org/project/GAICo/"
+                         target="_blank">GAICO</a> and 
+                        <a href="http://casy.cse.sc.edu/causal_rating"
+                        target="_blank">ARC</a> tools)
+                      ,  
                       <a href="https://ai4society.github.io/projects/group_rec/index.html"
                       target="_blank">group recommendation</a>,  
                     metaconition-based                 
-                    <a href="https://github.com/ai4society/sofai_tool/"
-                      target="_blank">SOFAI tool</a> to combine fast (e.g., LLMs) and slow thinking 
-                      (e.g., reasoners), and 
+                      <a href="https://github.com/ai4society/sofai_tool/"
+                       target="_blank">SOFAI tool</a> to combine fast (e.g., LLMs) and slow thinking 
+                       (e.g., reasoners), and 
                     exploring AI like
                     <a href="https://ai4society.github.io/projects/chatbots_page/index.html"
                       target="_blank">chatbots</a> in trust-sensitive domains, viz. 
@@ -72,9 +78,10 @@
                                target="_blank">elections</a>,  
                      <a href="https://ai4society.github.io/projects/InfoSpread/index.html" 
                                target="_blank">opinion networks</a>, and
-                    <a href="https://sites.google.com/site/biplavsrivastava/research-1/ai-and-healthcovid19" 
-                               target="_blank">health</a>.
+                    <a href="https://ai4society.github.io/projects/traffic-page/index.html" 
+                               target="_blank">traffic (for SC)</a>.
                   </p>
+
                   
                   <div style="background-color: #cef1c7; padding: 6px 10px; border-radius: 5px; margin: 10px 0;">
                     <p align="justify" style="font-weight: bold; margin: 0;">
