--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                        (<a href="https://pypi.org/project/GAICo/"
                          target="_blank">GAICO</a> and 
                         <a href="http://casy.cse.sc.edu/causal_rating"
-                        target="_blank">ARC</a> tools)
-                      ,  
+                        target="_blank">ARC</a> tools),  
                       <a href="https://ai4society.github.io/projects/group_rec/index.html"
                       target="_blank">group recommendation</a>,  
                     metaconition-based                 
