--- a/publications/index.html
+++ b/publications/index.html
@@ -43,7 +43,6 @@
                             <div class="sub-topics">
                                 <p>Conference</p>
                                 <p>Journal</p>
-                                <p>Symposium</p>
                                 <p>Workshop</p>
                                 <p>Demo</p>
                                 <p>Tutorial</p>
@@ -96,7 +95,7 @@
                                 Michael Widener, Kausik Lakkaraju, John Aydin, Biplav Srivastava
                                 <br>
                                 <a href='https://arxiv.org/abs/2508.20437' target="_blank">[Paper]</a>
-                                <span class="tag tag-type">Symposium</span>
+                                <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Trust Rating</span>
                                 <br>
                             </li>
@@ -905,6 +904,7 @@
 </body>
 
 </html>
+
 
 
 
