--- a/publications/index.html
+++ b/publications/index.html
@@ -41,6 +41,7 @@
                         <div class="legend-item">
                             <span class="tag tag-type">Type</span>
                             <div class="sub-topics">
+                                <p>Book</p>
                                 <p>Conference</p>
                                 <p>Journal</p>
                                 <p>Workshop</p>
@@ -96,6 +97,19 @@
                                 <br>
                                 <a href='https://arxiv.org/abs/2508.20437' target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Conference</span>
+                                <span class="tag tag-method">Trust Rating</span>
+                                <br>
+                            </li>
+
+                            
+                            <li><b>PROMISE - PROMoting AI’s Safe usage for Elections</b><br>
+                                <i>Publisher: Springer Nature</i>, Oct 2025<br>
+                                Editors: Biplav Srivastava, Anita Nikolich, Andrea Hickerson, Tarmo Koppel
+                                <br>
+                                <a href='https://link.springer.com/book/10.1007/978-3-031-89853-2' target="_blank">[Book]</a>
+                                <span class="tag tag-type">Book</span>
+                                <span class="tag tag-domain">Elections</span>
+                                <span class="tag tag-method">Chatbots</span>
                                 <span class="tag tag-method">Trust Rating</span>
                                 <br>
                             </li>
@@ -904,6 +918,7 @@
 </body>
 
 </html>
+
 
 
 
