update projects page

--- a/projects/generalized_planning/index.html
+++ b/projects/generalized_planning/index.html
@@ -547,7 +547,7 @@
           </td>
         </tr>
 
-        <tr style="padding: 0px">
+        <!-- <tr style="padding: 0px">
           <td style="padding-left: 2.5%; width: 63%; vertical-align: middle">
             <p style="text-align: justify">
               <span style="background-color: hsl(60, 100%, 50%)"
@@ -611,7 +611,7 @@
               </td>
             </tr>
           </td>
-        </tr>
+        </tr> -->
 
         <tr style="padding: 0px">
           <td style="padding-left: 2.5%; width: 63%; vertical-align: middle">
