--- a/patents/index.html
+++ b/patents/index.html
@@ -69,7 +69,7 @@
                         <em>Biplav Srivastava, Vishal Pallagani</em>
                     </li>
                     <li>
-                        <strong>USC 1655</strong>
+                        <strong>USC 1655, US-20250300842-A1</strong>
                         Generating Trust Certificates for AI with Black and WhiteBox Verification, 2023<br>
                         <em>Biplav Srivastava, Kausik Lakkaraju, Siva Likitha Valluru, Marco Valtorta</em>
                     </li>
@@ -150,3 +150,4 @@
 </body>
 
 </html>
+
