--- a/publications/index.html
+++ b/publications/index.html
@@ -196,8 +196,8 @@
                             
                             <li><b>Fast, Slow, and Metacognitive Thinking in AI, 
                                 </b><br>
-                                <i><a href='https://www.nature.com/npjai/'
-                                    target="_blank">npj Artificial Intelligence</a>, 2025 (accepted for publication)</i><br>
+                                <i><a href='https://www.nature.com/articles/s44387-025-00027-5'
+                                    target="_blank">npj Artificial Intelligence</a>, Oct 2025 </i><br>
                                 Marianna Bergamaschi Ganapini, Murray Campbell, Francesco Fabiano, Lior Horesh, Jonathan Lenchner, Andrea Loreggia, Nicholas Mattei, Francesca Rossi, Biplav Srivastava, K. Brent Venable,
                                 <br>
             
@@ -920,6 +920,7 @@
 </body>
 
 </html>
+
 
 
 
