--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
                   
                   <div style="background-color: #cef1c7; padding: 6px 10px; border-radius: 5px; margin: 10px 0;">
                     <p align="justify" style="font-weight: bold; margin: 0;">
-                      We innovate and apply AI techniques for hard problems facing the society with an
-                      inclusive, value-driven, focus. 
+                      We innovate as well as apply AI techniques for hard problems facing the society with an
+                      inclusive, value-driven, focus. Historically, AI has done well only when not
+                      near humans.  
                     </p>
                   </div>
                 </td>
