--- a/publications/index.html
+++ b/publications/index.html
@@ -92,7 +92,7 @@
                         <li><b> GAICo: A Deployed and Extensible Framework for Evaluating Diverse 
                                  and Multimodal Generative AI Outputs </b><br>
                         <i>The Thirty-Eighth Annual Conference on Innovative Applications of Artificial Intelligence 
-                            (<a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">[IAAI/AAAI 2026]</a>), 
+                            (<a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">IAAI/AAAI 2026</a>), 
                             Singapore, January 2026 (Evaluation, LLMs, AR=19%)</i><br>
                             Nitin Gupta, Pallav Koppisetti, Kausik Lakkaraju, Biplav Srivastava
                               <br>
@@ -933,6 +933,7 @@
 </body>
 
 </html>
+
 
 
 
