--- a/planfm/publications.html
+++ b/planfm/publications.html
@@ -32,6 +32,20 @@
     <section class="publications">
       <h2>Research Publications</h2>
 
+
+        <div class="pub-entry">
+        <h3 class="pub-title">GAICo: A Deployed and Extensible Framework for Evaluating Diverse 
+                                 and Multimodal Generative AI Outputs </h3>
+        <p class="pub-authors">Nitin Gupta, Pallav Koppisetti, Kausik Lakkaraju, Biplav Srivastava</p>
+        <p class="pub-venue">Proceedings of the Thirty-Eighth Annual Conference on Innovative Applications of Artificial Intelligence
+               (IAAI/AAAI 2026), January 2026</p>
+        <div class="pub-links">
+          <a href="https://arxiv.org/abs/2508.16753" target="_blank">[Paper]</a>
+        </div>
+      </div>
+
+
+      
         <div class="pub-entry">
         <h3 class="pub-title">FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</h3>
         <p class="pub-authors">Vishal Pallagani, Nitin Gupta, John Aydin, Biplav Srivastava</p>
@@ -98,3 +112,4 @@
 </body>
 
 </html>
+
