--- a/planfm/index.html
+++ b/planfm/index.html
@@ -40,9 +40,9 @@
     <section class="updates">
       <h2>Recent Updates</h2>
       <ul class="updates-list">
-        <li>Oct 2025 – <a href='https://pypi.org/project/GAICo/' target="_blank"><b>GAICO</b></a> <a href='https://arxiv.org/abs/2508.16753' target="_blank">paper</a> accepted for presentation at <a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">IAAI/AAAI 2026</a>.</li>
+        <li>Oct 2025 – A <a href='https://arxiv.org/abs/2508.16753' target="_blank">paper</a> on <a href='https://pypi.org/project/GAICo/' target="_blank"><b>GAICo</b></a> has been accepted for presentation at <a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">IAAI/AAAI 2026</a>.</li>
         <li>Jun 2025 – Project update to NAIRR community. See <a href='https://figshare.com/collections/NAIRR_Pilot_Demonstration_Projects/7902128' target="_blank"><b>presentation</b></a>, along with others in the cohort. </li>
-        <li>Jun 2025 – Release of the python package, <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b></a>, 
+        <li>Jun 2025 – Release of the python package, <a href='https://pypi.org/project/GAICo/' target="_blank"><b>GAICo</b></a>, 
                         <i>GenAI Results Comparator (GAICo)</i>, to help compare, analyze and visualize outputs from Large Language Models (LLMs)
                          consistently; over 15k downloads by Oct 2025.  [Python, Foundation Models, Library].</li>
          <li>May 2025 – Release of the paper titled <a href="https://arxiv.org/abs/2505.24258">FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</a> on data-flow analysis of procedural text with plans, travel routes, and recipes, representing automated, semi-automated and manual workflows, respectively.</li>
@@ -92,5 +92,6 @@
 </body>
 
 </html>
+
 
 
