--- a/planfm/publications.html
+++ b/planfm/publications.html
@@ -44,7 +44,16 @@
         </div>
       </div>
 
-
+        <div class="pub-entry">
+        <h3 class="pub-title">On Identifying Why and When Foundation Models Perform Well on Time-Series Forecasting 
+                Using Automated Explanations and Rating </h3>
+        <p class="pub-authors">Michael Widener, Kausik Lakkaraju, John Aydin, Biplav Srivastava</p>
+        <p class="pub-venue">AAAI2025 Fall Symposium on AI Trustworthiness and Risk Assessment for Challenged Contexts 
+                  (ATRACC), Arlington, VA, USA, Nov 2025</p>
+        <div class="pub-links">
+          <a href="https://arxiv.org/abs/2508.20437" target="_blank">[Paper]</a>
+        </div>
+      </div>
       
         <div class="pub-entry">
         <h3 class="pub-title">FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</h3>
@@ -112,4 +121,5 @@
 </body>
 
 </html>
+
 
