Revise updates and fix formatting in index.html
Updated recent updates section with new information and corrected some formatting issues.

--- a/planfm/index.html
+++ b/planfm/index.html
@@ -41,6 +41,9 @@
       <h2>Recent Updates</h2>
       <ul class="updates-list">
         <li>Oct 2025 – A <a href='https://arxiv.org/abs/2508.16753' target="_blank">paper</a> on <a href='https://pypi.org/project/GAICo/' target="_blank"><b>GAICo</b></a> has been accepted for presentation at <a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">IAAI/AAAI 2026</a>.</li>
+        <li>Sep 2025 – A <a href='https://arxiv.org/abs/2508.20437' target="_blank">paper</a> on foundation Models (FMs), time series forecasting (PL task), and automated explanations has been accepted for presentation 
+                    at <a href='https://sites.google.com/view/aaai-atracc' target="_blank">AAAI2025 Fall Symposium 
+                    on AI Trustworthiness and Risk Assessment for Challenged Contexts (ATRACC), Nov 2025 </a>.</li>
         <li>Jun 2025 – Project update to NAIRR community. See <a href='https://figshare.com/collections/NAIRR_Pilot_Demonstration_Projects/7902128' target="_blank"><b>presentation</b></a>, along with others in the cohort. </li>
         <li>Jun 2025 – Release of the python package, <a href='https://pypi.org/project/GAICo/' target="_blank"><b>GAICo</b></a>, 
                         <i>GenAI Results Comparator (GAICo)</i>, to help compare, analyze and visualize outputs from Large Language Models (LLMs)
@@ -92,6 +95,7 @@
 </body>
 
 </html>
+
 
 
 
