--- a/index.html
+++ b/index.html
@@ -53,8 +53,25 @@
                     complexities of poor data, changing goals, and limited resources by augmenting their cognitive
                     limitations with technology. Lead by <a href="https://sites.google.com/site/biplavsrivastava"
                       target="_blank"> Prof. Biplav Srivastava</a>, the group works in neuro-symbolic methods, trusted
-                    AI, and applications of data-driven methods to society. Our <b>differentiating initiatives</b> are in 
-                    language models and ontology for planning 
+                    AI, and applications of data-driven methods to society. We innovate as well as apply AI techniques for hard problems facing the society with an
+                      inclusive, value-driven, focus. Historically, AI has done well only when not
+                      near humans.                       
+                      We innovate as well as apply AI techniques for hard problems facing the society with an
+                      inclusive, value-driven, focus. Historically, AI has done well only when not
+                      near humans. 
+
+                  </p>
+
+                  
+                  <div style="background-color: #cef1c7; padding: 6px 10px; border-radius: 5px; margin: 10px 0;">
+                    <p align="justify" style="font-weight: bold; margin: 0;">
+                      Our <b>differentiating initiatives</b> are in  working, including
+                      <a href="https://ai4society.github.io/planfm/"
+                      target="_blank">training</a>,
+                    language models and 
+                     <a href="https://ai4society.github.io/projects/ontology/index.html"
+                      target="_blank">creating ontology</a>, 
+                      for planning 
                       (<a href="https://ai4society.github.io/projects/generalized_planning/index.html"
                       target="_blank">generalized planning</a>), 
                       black-box 
@@ -79,14 +96,6 @@
                                target="_blank">opinion networks</a>, and
                     <a href="https://ai4society.github.io/projects/traffic-page/index.html" 
                                target="_blank">traffic (for SC)</a>.
-                  </p>
-
-                  
-                  <div style="background-color: #cef1c7; padding: 6px 10px; border-radius: 5px; margin: 10px 0;">
-                    <p align="justify" style="font-weight: bold; margin: 0;">
-                      We innovate as well as apply AI techniques for hard problems facing the society with an
-                      inclusive, value-driven, focus. Historically, AI has done well only when not
-                      near humans.  
                     </p>
                   </div>
                 </td>
