Update text in index.html for better clarity
Refine text for clarity and improve phrasing.

--- a/index.html
+++ b/index.html
@@ -53,25 +53,22 @@
                     complexities of poor data, changing goals, and limited resources by augmenting their cognitive
                     limitations with technology. Lead by <a href="https://sites.google.com/site/biplavsrivastava"
                       target="_blank"> Prof. Biplav Srivastava</a>, the group works in neuro-symbolic methods, trusted
-                    AI, and applications of data-driven methods to society. We innovate as well as apply AI techniques for hard problems facing the society with an
-                      inclusive, value-driven, focus. Historically, AI has done well only when not
-                      near humans.                       
+                    AI, and applications of data-driven methods to society.                      
                       We innovate as well as apply AI techniques for hard problems facing the society with an
                       inclusive, value-driven, focus. Historically, AI has done well only when not
                       near humans. 
-
                   </p>
 
                   
                   <div style="background-color: #cef1c7; padding: 6px 10px; border-radius: 5px; margin: 10px 0;">
                     <p align="justify" style="font-weight: bold; margin: 0;">
-                      Our <b>differentiating initiatives</b> are in  working, including
+                      Our <b>differentiating initiatives</b> are in  working with, including
                       <a href="https://ai4society.github.io/planfm/"
                       target="_blank">training</a>,
-                    language models and 
+                    large language models and 
                      <a href="https://ai4society.github.io/projects/ontology/index.html"
-                      target="_blank">creating ontology</a>, 
-                      for planning 
+                      target="_blank">creating ontology</a>  
+                      for automated planning 
                       (<a href="https://ai4society.github.io/projects/generalized_planning/index.html"
                       target="_blank">generalized planning</a>), 
                       black-box 
@@ -98,6 +95,7 @@
                                target="_blank">traffic (for SC)</a>.
                     </p>
                   </div>
+                  
                 </td>
 
 
