--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
                   <p style="text-align:left">
                     <name>About AI4Society</name>
                   </p>
-                  <p align="justify">AI for Society (AI4S) group at the <a href="//aiisc.ai/" target="_blank">AI
+                  <p align="justify">
+                    Historically, AI has done well only when not near humans. 
+                    AI for Society (AI4S) group at the <a href="//aiisc.ai/" target="_blank">AI
                       Institute</a> is focused on enabling people to make rational decisions despite real-world
                     complexities of poor data, changing goals, and limited resources by augmenting their cognitive
                     limitations with technology. Lead by <a href="https://sites.google.com/site/biplavsrivastava"
                       target="_blank"> Prof. Biplav Srivastava</a>, the group works in neuro-symbolic methods, trusted
                     AI, and applications of data-driven methods to society.                      
                       We innovate as well as apply AI techniques for hard problems facing the society with an
-                      inclusive, value-driven, focus. Historically, AI has done well only when not
-                      near humans. 
+                      inclusive, value-driven, focus. 
                   </p>
 
                   
